--- a/CommonComponent.csproj
+++ b/CommonComponent.csproj
@@ -3,9 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>CommonComponent</PackageId>
-  <Version>1.0.0</Version>
-  <Authors>Ye</Authors>
-  <Company>CHT</Company>
+    <Version>1.0.0</Version>
+    <Authors>Ye</Authors>
+    <Company>CHT</Company>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
